Fix dark mode css on hobbies and profile

--- a/app/static/styles/dark/profile_dark.css
+++ b/app/static/styles/dark/profile_dark.css
@@ -35,13 +35,13 @@ profile-specific styles
 .profile-description > .profile-name {
   font-size: 2em;
   margin-left: 1em;
-  color: #3d3d3d;
+  color: #F1F2F4;
   margin: 0;
 }
 
 .profile-description > .profile-position {
   font-size: 1em;
-  color: #575757;
+  color: #A3ABB2;
   margin: 0;
   text-align: left;
 }
